# jed

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Gemfile  LICENSE  README.md  Rakefile  TEMP_RULE_BASED_EXTENSIONS_PLAN.md  TODO-cold-optimizations.md  TODO-cost-plan-input.md  TODO-insert-performance.md  TODO.md  biome.json  mise.toml
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  docker-compose.yml  on-create.bash  post-create.bash
.github/workflows/: web-deploy.yml
bench/: README.md
bench/corpus/: benchmarks.toml  datasets.toml
bench/go/: go.mod  go.sum
bench/ruby/: README.md  bench_jed.rb
bench/rust/: Cargo.toml
bench/rust/src/: lib.rs
bench/ts/: package-lock.json  package.json
cli/: Cargo.toml
cli/src/: args.rs  csv.rs  dump.rs  main.rs  migrate.rs  render.rs  script.rs  session.rs  splitter.rs
cli/src/tui/: app.rs  complete.rs  draw.rs  grid.rs  highlight.rs  history.rs  mod.rs  schema.rs
cli/tests/: e2e.rs
cli/tests/testdata/: basic.golden  basic.sql  errors.sql  formats.sql  formats_box.golden  formats_csv.golden  formats_json.golden  formats_markdown.golden
impl/: README.md
impl/go/: README.md  abide.go  access_candidate_test.go  access_path.go  aggregate.go  aggregate_resolve.go  alter_constraints.go  alter_table_test.go  api.go  api_test.go  array_composite_functions_test.go  array_concat_search_test.go  array_containment_test.go  array_functions_test.go  array_key_test.go  array_quantified_test.go  array_test.go  array_variadic_test.go  ast.go  attach_test.go  batch.go  blockstore.go  blockstore_datasync_linux.go  blockstore_datasync_other.go  blockstore_test.go  boolean_key_test.go  bufferpool.go  bufferpool_test.go  cancellation_test.go  cast_array_runtime_test.go  cast_bool_int_test.go  cast_text_date_test.go  cast_text_runtime_test.go  cast_uuid_test.go  catalog.go  check_constraint_test.go  checksum_test.go  collation.go  collation_host_test.go  collation_test.go  (+177 more)
impl/node/: Cargo.toml  README.md  index.ts  package.json
impl/node/src/: lib.rs
impl/node/test/: node.test.ts
impl/ruby/: README.md  jed.gemspec
impl/ruby/ext/: Cargo.toml
impl/ruby/ext/src/: lib.rs
impl/rust/: Cargo.toml  README.md  build.rs
impl/rust/.cargo/: config.toml
impl/rust/src/: api.rs  ast.rs  blockstore.rs  bufferpool.rs  cancel.rs  catalog.rs  collation.rs  coordinator.rs  cost.rs  costs.rs  cursor.rs  date.rs  datetime_fn.rs  decimal.rs  encoding.rs  ergonomic.rs  error.rs  estimator.rs  estimator_constants.rs  executor.rs  extension.rs  file.rs  format.rs  gist.rs  integration_tests.rs  interval.rs  json.rs  jsonpath.rs  lexer.rs  lib.rs  lz4.rs  operators.rs  pager.rs  paging.rs  parser.rs  pmap.rs  privileges.rs  range.rs  ranges_gen.rs  recovery.rs  (+13 more)
impl/rust/src/executor/: access_encode.rs  access_path.rs  aggregate.rs  ddl.rs  dml.rs  engine.rs  estimate_plan.rs  eval.rs  eval_ops.rs  exec_emit.rs  exec_helpers.rs  exec_scan.rs  execute.rs  explain_exec.rs  hash_join.rs  kernels.rs  mod.rs  optimize.rs  plan_query.rs  planner.rs  resolve.rs  resolve_agg.rs  resolve_func.rs  snapshot.rs  srf.rs  statistics.rs  store_encode.rs  window.rs
impl/rust/tests/: alter_table.rs  api.rs  array.rs  array_composite_functions.rs  array_concat_search.rs  array_containment.rs  array_functions.rs  array_key.rs  array_quantified.rs  array_variadic.rs  attach.rs  boolean_key.rs  cancellation.rs  cast_array_runtime.rs  cast_bool_int.rs  cast_text_date.rs  cast_text_runtime.rs  cast_uuid.rs  check_constraint.rs  checksum.rs  collation.rs  collation_host.rs  comments.rs  composite.rs  composite_key.rs  composite_pk.rs  compressed_cost.rs  correlated_pushdown.rs  cost_limit.rs  create_table.rs  cte.rs  date.rs  date_clock.rs  datetime_conversions.rs  decimal.rs  delete.rs  depth_limit.rs  drop_table.rs  encoding.rs  ergonomic.rs  (+58 more)
impl/ts/: README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.browser.json  tsconfig.json  tsconfig.worker.json  vite.config.ts
impl/ts/native-lock/: Cargo.toml  README.md
impl/ts/native-lock/src/: lib.rs
impl/wasm/: Cargo.toml  README.md
impl/wasm/src/: lib.rs
migrate/: README.md  design.md
migrate/go/: doc.go  errors.go  go.mod  load.go  load_test.go  migration.go  migrator.go  migrator_test.go  new.go  new_test.go  target.go  target_test.go
migrate/rust/: Cargo.toml
migrate/rust/src/: error.rs  lib.rs  load.rs  migration.rs  migrator.rs  scaffold.rs  target.rs
migrate/rust/tests/: migrate.rs
migrate/testdata/: README.md
migrate/ts/: package-lock.json  package.json  tsconfig.json
scripts/: bench_diff.rb  bench_html.rb  bench_markdown.rb  bench_report.rb  bench_results.rb  extract_casing.rb  gen_catalog.rb  gen_costs.rb  gen_errors.rb  gen_estimator.rb  norec_gen.rb  oracle_import.rb  process_conformance.rb  reduce.rb  reduce_selftest.rb  rqg_gen.rb  vendor_collations.rb
scripts/lib/: oracle_overrides.rb  pg_oracle.rb
spec/: README.md
spec/collation/: README.md
spec/conformance/: README.md  TEST_GAPS.md  determinism_exceptions.toml  manifest.toml  oracle_overrides.toml  verify.rb
spec/cost/: estimator.toml  estimator_vectors.toml  estimator_verify.rb  schedule.toml  verify.rb
spec/design/: README.md  aggregates.md  alter.md  api.md  array-functions.md  array.md  attached-databases.md  benchmarks.md  bplus-reshape.md  cli.md  codegen.md  collation.md  compatibility.md  composite.md  concurrency-testing.md  conformance.md  constraints.md  cores.md  cost.md  cte.md  date.md  decimal.md  determinism.md  encoding.md  encryption.md  entropy.md  error-fields.md  estimator.md  explain.md  extensibility.md  float.md  functions.md  gin.md  gist.md  grammar.md  hosts.md  indexes.md  interval.md  introspection.md  json-sql-functions.md  (+31 more)
spec/encoding/: README.md  bytea.toml  composite.toml  dates.toml  decimal.toml  float.toml  integers.toml  prng.toml  (+8 more)
stress/: balance_transfer.stress.toml
web/: .gitignore  .prettierignore  README.md  mdsvex.config.js  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tsconfig.json  vite.config.ts
(+836 files in other folders)
