# The jed CLI — a HOST PROGRAM, not a core (CLAUDE.md §2; spec/design/cli.md).
# Standalone crate, deliberately NOT in a workspace with impl/rust: the engine crate
# stays hermetic and zero-dependency. The TUI dependencies below are the §14 record —
# proposed in planning and explicitly approved by the maintainer 2026-06-12 — and are
# confined to this crate (cli.md §2).

[package]
name = "jed-cli"
version = "0.2.0"
edition = "2024"
publish = false
description = "The jed terminal client: a full-screen TUI + plain script mode (spec/design/cli.md)."

[[bin]]
name = "jed"
path = "src/main.rs"

[dependencies]
jed = { path = "../impl/rust" }
# The `jed migrate` subcommand bundles the migrate crate (design.md §9): a sibling consumer of
# the same Rust core, so migrations ship in the CLI with no separate binary to install. Not a
# third-party dependency — it is part of this repo and depends only on the jed core + std.
jed-migrate = { path = "../migrate/rust" }
ratatui = "0.29"
crossterm = "0.28"
tui-textarea = "0.7"
