# Native Node.js host artifact wrapping the safe Rust core. This is deliberately a separate crate:
# the Rust and TypeScript cores keep their existing manifests and remain independent conformance
# voices. Exact napi-rs pins make the experiment reproducible while the project decides whether the
# production Node package should remain native TypeScript or wrap Rust.

[package]
name = "jed-node"
version = "0.0.0"
edition = "2024"
publish = false
description = "Native Node-API wrapper over the safe jed Rust core."

[lib]
name = "jed_node"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
jed = { path = "../rust" }
napi = { version = "=3.10.5", default-features = false, features = ["napi8"] }
napi-derive = "=3.5.10"

[build-dependencies]
napi-build = "=2.3.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
