[package]
name = "jed"
version = "0.0.0"
edition = "2024"
publish = false
description = "Rust core of the engine — a downstream consumer of /spec (CLAUDE.md §2)."
# The integration tests reach into internal modules, which are now private (API-narrowing). They are
# compiled IN-CRATE instead (src/integration_tests.rs #[path]-includes each tests/*.rs as a #[cfg(test)]
# module, with `extern crate self as jed` keeping their `jed::…` paths working), so auto-discovery is off.
autotests = false

[lib]
name = "jed"
path = "src/lib.rs"

# The conformance harness: runs the shared corpus under spec/conformance.
[[bin]]
name = "conformance"
path = "src/bin/conformance.rs"

[dependencies]
# OS entropy for the uuid generators' production path (spec/design/entropy.md §6). Rust `std`
# has no OS RNG; the engine reads one u64 seed per statement only when a generator runs unseeded
# (tests inject a fixed seed and never touch this). Approved under CLAUDE.md §14 (the user's
# "engine reads OS entropy" decision); Go/TS use their stdlib (crypto/rand, node:crypto).
getrandom = "0.3"

[dev-dependencies]
# TOML is a TEST-TIME ONLY dependency (CLAUDE.md §5): the cross-check tests read the
# canonical spec data tables to prove the hand-written constants match. No runtime use.
toml = "0.9"
